@@ -4,6 +4,8 @@ OpenSCAD 2013.XX
 Features:
 o Console output is now enabled on Windows through the openscad.com executable
 o Added basic syntax highlighting in the editor
+o Commandline output of CGAL render to png image using '-o f.png --render'
+o Regression test now creates single monolithic .html file for easier uploading
 
 Bugfixes:
 o OpenCSG rendering sometimes crashed when rendering large models
@@ -11,6 +13,9 @@ o We didn't always print a warning when CSG normalization created too many eleme
 o Binary STLs can now be read on big endian architectures
 o Some binary STLs couldn't be read
 o Fixed some issues related to ARM builds
+o Improved regression dumptest multmatrix output portability
+o Regression test auto-starts & stops Xvfb / Xvnc if on headless unix machine
+o CGAL triangulation more lenient- enables partial rendering of 'bad' DXF data
 
 OpenSCAD 2013.01
 ================
